feat: add command line telemetry disclosure (#242)
* feat: add command line telemetry disclosure

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "files": [
     "dist/background-process.js",
     "dist/collect.js",
-    "dist/spawn-background-process.js"
+    "dist/spawn-background-process.js",
+    "dist/notify.js"
   ],
   "scripts": {
     "build": "npm run clean && npm run compile && npm run compile:collect && npm run bundle",
