--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # Default global
 * @ibm-telemetry/telemetry-devs
 
-package-lock.json @jdharvey-ibm @francinelucca
-package.json @jdharvey-ibm @francinelucca
+package-lock.json @jharvey10 @francinelucca
+package.json @jharvey10 @francinelucca
