fix(test): upload github.com/actions/upload-artifact/issues/610

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -85,6 +85,7 @@ jobs:
 
       - name: Upload test coverage reports 🛫
         uses: actions/upload-artifact@v4
+        include-hidden-files: true
         with:
           name: test-coverage
           path: '**/.test-coverage/lcov.info'
