--- a/package.json
+++ b/package.json
@@ -46,9 +46,6 @@
     "test": "vitest run --coverage",
     "test:watch": "vitest --coverage"
   },
-  "dependencies": {
-    "is-inside-container": "^1.0.0"
-  },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
@@ -81,6 +78,7 @@
     "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
+    "is-inside-container": "^1.0.0",
     "js-yaml": "^4.1.0",
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
