feat(environment): can run in containers (#282)
* feat(environment): can run in containers

* fix: added function test

* fix: update readme

* fix: revert boolean

* fix: updated readme

Co-authored-by: Matt Rosno <matt.rosno@gmail.com>

* fix: mocked ci getter functions

---------

Co-authored-by: Matt Rosno <matt.rosno@gmail.com>

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@opentelemetry/semantic-conventions": "^1.27.0",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.7",
+    "@types/mock-fs": "^4.13.4",
     "@types/node": "^20.16.5",
     "@types/semver": "^7.5.8",
     "@vitest/coverage-v8": "^1.6.0",
@@ -77,9 +78,11 @@
     "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
+    "is-inside-container": "^1.0.0",
     "js-yaml": "^4.1.0",
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
+    "mock-fs": "^5.4.0",
     "object-scan": "^19.0.5",
     "prettier": "^3.3.3",
     "reflect-metadata": "^0.2.1",
