feat: wc scopes basic flow completed

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^20.16.5",
     "@types/semver": "^7.5.8",
     "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/eslint-plugin": "^1.0.1",
     "ajv": "^8.17.1",
     "ci-info": "^4.0.0",
     "commander": "^12.1.0",
@@ -75,7 +76,6 @@
     "eslint-plugin-notice": "^0.9.10",
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "@vitest/eslint-plugin": "^1.0.1",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
     "js-yaml": "^4.1.0",
@@ -92,5 +92,8 @@
     "typescript-eslint": "^7.18.0",
     "vite": "^5.4.3",
     "vitest": "^1.6.0"
+  },
+  "dependencies": {
+    "htmlparser2": "^10.0.0"
   }
 }
