--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "test": "vitest run --coverage",
     "test:watch": "vitest --coverage"
   },
+  "dependencies": {
+    "htmlparser2": "^10.0.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
-    "@ibm/telemetry-attributes-js": "^4.2.1",
-    "@ibm/telemetry-config-schema": "^1.3.0",
+    "@ibm/telemetry-attributes-js": "^4.4.0",
+    "@ibm/telemetry-config-schema": "^1.4.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.53.0",
     "@opentelemetry/otlp-exporter-base": "^0.53.0",
@@ -64,9 +67,12 @@
     "@types/node": "^20.16.5",
     "@types/semver": "^7.5.8",
     "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/eslint-plugin": "^1.0.1",
     "ajv": "^8.17.1",
     "ci-info": "^4.0.0",
     "commander": "^12.1.0",
+    "domhandler": "^5.0.3",
+    "domutils": "^3.2.2",
     "esbuild": "^0.25.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.30.0",
@@ -75,7 +81,6 @@
     "eslint-plugin-notice": "^0.9.10",
     "eslint-plugin-promise": "^6.6.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "@vitest/eslint-plugin": "^1.0.1",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
     "js-yaml": "^4.1.0",
